syntax = "proto3";

package agents;

message QueryRequest {
  string type = 1;
  repeated string labels = 2;
}

message Service {
  string session_id = 1;
  string service_id = 2;
  string type = 3;
  string agent_key = 4;
}

message QueryResponse {
  repeated Service services = 1;
}
